Issue with type detection were fixed.